--- a/static/css/output.css
+++ b/static/css/output.css
@@ -10084,7 +10084,6 @@ color:#f1edce;
 
 #top-button{
     background: linear-gradient(45deg, #f5e8a2, #ccad00);
-    font-weight: 900;
 }
 
 .about-section {
@@ -10264,10 +10263,9 @@ svg {
 }
 
   .btn {
-      position: fixed;
+      margin-top:8%;
       bottom: 5%;
       right: 0px;
-      transform: translateX(-50%);
       border: 1px solid #fff;
       border-radius: 5px;
       font-size: 0.9rem;
